# spinerobot_ws

./: .gitignore  README.md  camera_launch.py  cppcheck_report.txt  ethercat_nodes_launch.py  launch_all_nodes.py
.github/workflows/: cppcheck.yml  doxygen-auto-publish.yml  flawfinder-analysis.yml
cam_pkg/: CMakeLists.txt  package.xml  plugin.xml  setup.py
cam_pkg/include/cam_pkg/: image_view.h
cam_pkg/scripts/: cam_pkg
cam_pkg/src/cam_pkg/: image_view.cpp  image_view.ui  main.cpp
controller/: CMakeLists.txt  package.xml
controller/src/: joy_node_linux.cpp
custom_image_view/: CMakeLists.txt  package.xml  plugin.xml  setup.py
custom_image_view/include/custom_image_view/: image_view.h  ratio_layouted_frame.h
custom_image_view/scripts/: custom_image_view  image_publisher
custom_image_view/src/custom_image_view/: image_view.cpp  image_view.ui  ratio_layouted_frame.cpp
docs/: CMakeLists_8txt.tex  Doxyfile  DxlMaster_8cpp.tex  DxlMaster_8h.tex  DxlMaster_8h__dep__incl.md5  DxlMaster_8h__incl.md5  LaunchExample_2pub__sub__launch_8py.html  README_8md.html  annotated.html  annotated.tex  annotated_dup.js  classControlUI-members.html  classControlUI.html  classControlUI__coll__graph.md5  classControlUI__inherit__graph.map  classController-members.html  classController.html  classEndoscopeViewer-members.html  classEndoscopeViewer.html  classEndoscopeViewer__coll__graph.map  classEndoscopeViewer__coll__graph.md5  classEndoscopeViewer__inherit__graph.map  classEndoscopeViewer__inherit__graph.md5  classEthercatCommunication_1_1EthercatNode-members.html  classEthercatCommunication_1_1EthercatNode.html  classEthercatCommunication_1_1EthercatNode.tex  classEthercatCommunication_1_1EthercatNode__coll__graph.map  classEthercatCommunication_1_1EthercatNode__coll__graph.md5  classEthercatLifeCycleNode_1_1EthercatLifeCycle-members.html  classEthercatLifeCycleNode_1_1EthercatLifeCycle.html  classEthercatLifeCycleNode_1_1EthercatLifeCycle.tex  classEthercatLifeCycleNode_1_1EthercatLifeCycle__coll__graph.map  classEthercatLifeCycleNode_1_1EthercatLifeCycle__coll__graph.md5  classEthercatLifeCycleNode_1_1EthercatLifeCycle__inherit__graph.md5  classEthercatSlave-members.html  classEthercatSlave.html  classEthercatSlave.js  classEthercatSlave.tex  classEthercatSlave__coll__graph.map  classEthercatSlave__coll__graph.md5  (+428 more)
docs/doxy_xml/: LaunchExample_2pub__sub__launch_8py.xml  README_8md.xml  classControlUI.xml  classController.xml  classEndoscopeViewer.xml  classEthercatCommunication_1_1EthercatNode.xml  classEthercatLifeCycleNode_1_1EthercatLifeCycle.xml  classEthercatSlave.xml  classGUI_1_1GuiNode.xml  classHapticNode.xml  classTiming.xml  (+91 more)
ecat_msgs/: CMakeLists.txt  package.xml
ecat_pkg/: CMakeLists.txt  CMakeXenomai.txt  package.xml
gui_pkg/: CMakeLists.txt  package.xml
html/: CMakeLists_8txt.html  DxlMaster_8cpp.html  DxlMaster_8h.html  DxlMaster_8h_source.html  README_8md.html  classDxlMaster-members.html  classDxlMaster.html  classEthercatCommunication_1_1EthercatNode.html  classEthercatLifeCycleNode_1_1EthercatLifeCycle.html  classEthercatSlave-members.html  classEthercatSlave.html  classGUI_1_1GuiNode.html  classGUI_1_1GuiNode__coll__graph.md5  classHapticNode.html  classMainWindow-members.html  classMainWindow.html  classTiming-members.html  classVideoCapture.html  classsurgicalToolNode.html  dir_000013_000005.html  dir_01e3b00c0e79295f4d52db5e62983e30.html  dir_49c8a06a9201d6d04532d5a0bfb6e5e9.html  dir_5f6a9ac372f08ad2f9f56fbda15f8efd.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6ed40f2d31a14c8f080c4f6acbbad9fa.html  dir_86ae27c4297ac583bcdd036becb19fdf.html  dir_86ae27c4297ac583bcdd036becb19fdf_dep.map  dir_86ae27c4297ac583bcdd036becb19fdf_dep.md5  dir_a3e6f37a0cb1f1b52c81cef1d2486b5a.html  dir_a3e6f37a0cb1f1b52c81cef1d2486b5a_dep.md5  dir_a8d7c3dfc6a2d1ab1ed6aadf73452078.html  dir_a8d7c3dfc6a2d1ab1ed6aadf73452078_dep.map  dir_ae28881369d45bc0b6e8368dbee24965.html  dir_c77c6ac24c706dd879d845a67959d240.html  dir_d1c11a3287acad9e9d7e185057a52b41.html  dir_d1c11a3287acad9e9d7e185057a52b41_dep.map  dir_d1c11a3287acad9e9d7e185057a52b41_dep.md5  ecat__globals_8hpp.html  ecat__globals_8hpp__incl.map  (+103 more)
joy_test/: package.xml
latex/: DxlMaster_8cpp.tex  DxlMaster_8cpp__incl.md5  DxlMaster_8h_source.tex  classDxlMaster.tex  classEthercatCommunication_1_1EthercatNode.tex  classEthercatLifeCycleNode_1_1EthercatLifeCycle__inherit__graph.md5  classEthercatSlave.tex  classGUI_1_1GuiNode.tex  classGUI_1_1GuiNode__inherit__graph.md5  classHapticNode__coll__graph.md5  classMainWindow.tex  classMainWindow__inherit__graph.md5  classTiming.tex  classVideoCapture.tex  classsurgicalToolNode__inherit__graph.md5  dir_1ddb388387a7a32e5e04c01fabcf41c5.tex  dir_34a4b34f2cfbf09a1592a51ce47086eb.tex  dir_43175be8285d9322b122867840b67d13_dep.md5  dir_49c8a06a9201d6d04532d5a0bfb6e5e9.tex  dir_578fcc4aa7bb58f0f856b2f7d84499c2.tex  dir_5a4e756bb77571bd5b8d32b7a3f7541e.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_6ed40f2d31a14c8f080c4f6acbbad9fa_dep.md5  dir_a8d7c3dfc6a2d1ab1ed6aadf73452078.tex  dir_d1c11a3287acad9e9d7e185057a52b41.tex  dir_e13597078cf4e6075ccc1389ec844104.tex  ecat__globals_8hpp.tex  ecat__globals_8hpp_source.tex  ecat__lifecycle_8cpp__incl.md5  ecat__lifecycle_8hpp.tex  ecat__lifecycle_8hpp__dep__incl.md5  ecat__lifecycle_8hpp__incl.md5  ecat__node_8cpp__incl.md5  ecat__node_8hpp__dep__incl.md5  ecat__node_8hpp_source.tex  ecat__pkg_2include_2ecat__pkg_2timing_8hpp.tex  ecat__pkg_2include_2ecat__pkg_2timing_8hpp__dep__incl.md5  ecat__pkg_2include_2ecat__pkg_2timing_8hpp_source.tex  ecat__pkg_2src_2main_8cpp__incl.md5  ecat__slave_8cpp.tex  (+37 more)
src/ecat_pkg/: CMakeLists.txt  package.xml
src/ecat_pkg/include/ecat_pkg/: ecat_definitions.hpp  ecat_globals.hpp  ecat_lifecycle.hpp  ecat_node.hpp  ecat_slave.hpp  lifecycle_node_manager.hpp  object_dictionary.hpp
src/ecat_pkg/src/: ecat_lifecycle.cpp  ecat_node.cpp  ecat_slave.cpp  lifecycle_node_manager.cpp  main.cpp  mainXeno.cpp
tool_pkg/: CMake2Lists.txt  CMakeLists.txt
(+357 files in other folders)
