<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ecat_pkg</name>
  <version>0.0.1</version>
  <description>My build tests for ROS2 node</description>
  <maintainer email="veysi.adin@kist.re.kr">veysiadn</maintainer>
  <license>Apache Licence 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
